app/assets/stylesheets/config/utilities/_spacing.scss
// Margin
.mb-0 {
	margin-bottom: 0;
}

.mt-0 {
	margin-top: 0;
}

.ml-0 {
	margin-left: 0;
}

.m0 {
	margin-right: 0 !important;
}

.m-0 {
	margin: 0;
}

.mb-2 {
	margin-bottom: 8px;
}

.mb-5 {
	margin-bottom: 64px;
}

.ml-2 {
	margin-left: 8px;
}

.mr-2 {
	margin-right: 8px;
}

.mt-2 {
	margin-top: 8px;
}

.my-2 {
	@extend .mt-2, .mb-2;
}

.mx-2 {
	@extend .mr-2, .ml-2;
}

.mb-1 {
	margin-bottom: 4px;
}

.mt-1 {
	margin-top: 4px;
}

.mr-1 {
	margin-right: 4px;
}

.ml-1 {
	margin-left: 4px;
}

.mx-1 {
	@extend .mr-1, .ml-1;
}

.m-1 {
	@extend .mr-1, .ml-1, .mb-1, .mt-1;
}

.mr-2 {
	margin-right: 8px;
}

.mr-0 {
  margin-right: 0;
}

.mx-0 {
	@extend .ml-0;
	@extend .mr-0;
}

.my-0 {
	@extend .mb-0;
	@extend .mt-0;
}

.noMargin,
.m-0 {
	margin: 0;
}

.mt-3 {
	margin-top: 16px;
}

.mr-1 {
	margin-right: 4px;
}

.mr-3 {
	margin-right: 16px;
}

.mb-1 {
	margin-bottom: 4px;
}

.mb-3 {
	margin-bottom: 16px;
}

.my-3 {
	@extend .mt-3, .mb-3;
}

.mx-3 {
	@extend .ml-3;
	@extend .mr-3;
}

.m-3 {
	@extend .ml-3;
	@extend .mr-3;
	@extend .mb-3;
	@extend .mt-3;
}

.mt-2 {
	margin-top: 12px;
}

.ml-1 {
	margin-left: 4px;
}

.ml-3 {
	margin-left: 16px;
}

.mt-4 {
	margin-top: 32px;
}

.mb-4 {
  margin-bottom: 32px;
}

.my-4 {
  @extend .mt-4, .mb-4;
}

.mr-4 {
  margin-right: 32px;
}

.ml-4 {
  margin-left: 32px;
}

.my-4 {
  @extend .mt-4, .mb-4;
}

.mx-4 {
  @extend .mr-4, .ml-4;
}


.mt-5 {
	margin-top: 64px;
}

// Padding

.pl-0 {
	padding-left: 0 !important;
}

.pr-0 {
	padding-right: 0 !important;
}

.px-0 {
	@extend .pl-0;
	@extend .pr-0;
}

.px-1 {
	padding-left: 4px;
	padding-right: 4px;
}

.pt-0 {
	padding-top: 0;
}

.p-1 {
	padding: 4px;
}

.p-2 {
	padding: 8px;
}

.p-3 {
	padding: 16px;
}

.px-3 {
	padding-left: 16px;
	padding-right: 16px;
}

.spacer {
	width: 8px;
}

.pb-2 {
	padding-bottom: 8px;
}

.pt-2 {
	padding-top: 8px;
}

.pl-2 {
	padding-left: 8px;
}

.pr-2 {
	padding-right: 8px;
}

.py-2 {
	@extend .pt-2, .pb-2;
}

.pb-1 {
	padding-bottom: 4px;
}

.pt-1 {
	padding-top: 4px;
}

.pl-1 {
	padding-left: 4px;
}

.pr-1 {
	padding-right: 4px;
}

.py-1 {
	@extend .pt-1, .pb-1;
}

.pb-3 {
	padding-bottom: 16px;
}

.pt-3 {
	padding-top: 16px;
}

.pl-3 {
	padding-left: 16px;
}

.pr-3 {
	padding-right: 16px;
}

.py-3 {
	padding-top: 16px !important;
	padding-bottom: 16px !important;
}

.pb-4 {
	padding-bottom: 32px;
}

.pt-4 {
	padding-top: 32px;
}

.pl-4 {
	padding-left: 32px;
}

.pr-4 {
	padding-right: 32px;
}

.py-4 {
	padding-top: 32px !important;
	padding-bottom: 32px !important;
}

.p-0 {
  padding: 0 !important;
}

